--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,4 +1,7 @@
-.test {
-  background: black;
-  color: red;
+.items {
+  margin-top: 2em;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(350px,350px));
+  grid-gap: 2em;
+  justify-content: center;
 }
