--- a/src/components/MovieInfoListItem/MovieInfoListItem.module.css
+++ b/src/components/MovieInfoListItem/MovieInfoListItem.module.css
@@ -20,6 +20,7 @@
 }
 
 .vote {
+  padding: 0.3em;
   display: grid;
   justify-content: center;
   align-content: center;
@@ -27,8 +28,6 @@
   border-radius: 50%;
   font-size: 2rem;
   color:white;
-  height: 50px;
-  width: 50px;
 }
 
 h1 {
